fix bids stub on mobile

--- a/public/css/desktop/app.css
+++ b/public/css/desktop/app.css
@@ -1130,6 +1130,7 @@
   background-size: 100% !important;
   background-repeat: no-repeat;
   background-position: center;
+  border-radius: 4px;
 }
 
 .event_detail_table_avatar {
